added pandoc nougat

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -111,6 +111,8 @@ Override default project directory path.
 "../nougat/packages/ranger/ranger.org"
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
+* pandoc mode
+#+INCLUDE: "../nougat/packages/pandoc-mode/pandoc-mode.org"
 * language support
 ** LaTeX
 #+INCLUDE: "../nougat/support/latex/latex.org"
