updated with htmlize

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -83,6 +83,7 @@ evangelize people!
 #+INCLUDE: "../nougat/packages/org-mode/extras/nested-narrowing.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/dynamic-tag-position.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-export.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/htmlize.org"
 
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
