--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -10,6 +10,12 @@
 #+html_head: <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 #+html_head: <script type="text/javascript" src="https://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.js"></script>
 #+html_head: <script type="text/javascript" src="https://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
+* OS-specific
+** macOS
+Disable command-q
+#+begin_src emacs-lisp
+(global-unset-key (kbd "s-q"))
+#+end_src
 
 * boilerplate
 ** my/org-path-name
