added toc-org for github readmes

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -90,6 +90,7 @@ evangelize people!
 #+INCLUDE: "../nougat/packages/org-mode/extras/dynamic-tag-position.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-export.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/htmlize.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/toc-org.org"
 
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
