added ox-jira, toc-org snippets

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -91,7 +91,7 @@ evangelize people!
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-export.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/htmlize.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/toc-org.org"
-
+#+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
 
