--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -113,7 +113,7 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/helm/extras/helm-projectile.org"
 * yasnippet
 #+INCLUDE: "../nougat/packages/yasnippet/yasnippet.org"
-* COMMENT magit
+* magit
  #+INCLUDE: "../nougat/packages/magit/setup.org"
 * ranger
 "../nougat/packages/ranger/ranger.org"
