added undo-tree nougat

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -46,9 +46,7 @@ Disable command-q
 #+end_src
 
 * straight.el
-Straight.el is the future of package management for Emacs. Get out there and
-evangelize people!
-
+[[https://github.com/raxod502/straight.el][Straight.el]] is a next-generation, purely functional package manager for the Emacs hacker.
 #+INCLUDE: "../nougat/package-management/straight.org::bootstrap"
 #+INCLUDE: "../nougat/package-management/straight.org::use-package integration"
 
@@ -68,8 +66,12 @@ evangelize people!
 #+INCLUDE: "../nougat/emacs/key-bindings.org"
 #+INCLUDE: "../nougat/emacs/minor-modes.org"
 #+INCLUDE: "../nougat/emacs/modeline.org"
+#+INCLUDE: "../nougat/emacs/undo-tree.org"
 
 ** exec-path from shell
+[[https://github.com/purcell/exec-path-from-shell][This]] is a GNU Emacs library to ensure environment variables inside Emacs look the
+same as in the user's shell.
+
 #+begin_src emacs-lisp
   (use-package exec-path-from-shell
     :config
@@ -115,8 +117,6 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/yasnippet/yasnippet.org"
 * magit
  #+INCLUDE: "../nougat/packages/magit/setup.org"
-* ranger
-"../nougat/packages/ranger/ranger.org"
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
 * pandoc mode
@@ -129,7 +129,6 @@ Override default project directory path.
 ** python
 #+INCLUDE: "../nougat/support/python/jedi.org"
 #+INCLUDE: "../nougat/support/python/elpy.org"
-
 ** markdown
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
 
