default to undo-tree

--- a/nougat/emacs/undo-tree.org
+++ b/nougat/emacs/undo-tree.org
@@ -20,3 +20,8 @@ Full documentation can be found [[http://www.dr-qubit.org/undo-tree/undo-tree.tx
 #+begin_src emacs-lisp
 (use-package undo-tree)
 #+end_src
+
+#+CAPTION: Make undo-tree the default for all modes
+#+begin_src emacs-lisp
+(global-undo-tree-mode)
+#+end_src
