--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -1,15 +1,19 @@
-#+title: gvoysey's init.el
-#+description: A literate programming-style exposition of my Emacs configuration
+
+# ReadTheDocs styling for export
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
+#+HTML_HEAD: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+#+HTML_HEAD: <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
+
+
 #+language: en
 #+startup: overview indent align
 #+babel: :cache no
-#+options: ^:nil num:nil tags:nil toc:nil
-#+html_head: <link rel="stylesheet" type="text/css" href="https://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
-#+html_head: <link rel="stylesheet" type="text/css" href="https://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
-#+html_head: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-#+html_head: <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-#+html_head: <script type="text/javascript" src="https://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.js"></script>
-#+html_head: <script type="text/javascript" src="https://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
+#+options: ^:nil num:nil tags:nil toc:nil* OS-specific
+#+title: gvoysey's init.el
+#+description: A literate programming-style exposition of my Emacs configuration
 * OS-specific
 ** macOS
 Disable command-q
@@ -29,7 +33,7 @@ Disable command-q
     (concat my/org-path-name file-name))
 #+end_src
 
-  ,** my/notes-file-name
+** my/notes-file-name
 #+begin_src emacs-lisp
   (defvar my/notes-file-name (my/make-org-file-name "notes.org"))
 #+end_src
