--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -71,6 +71,7 @@ Disable command-q
 #+INCLUDE: "../nougat/emacs/minor-modes.org"
 #+INCLUDE: "../nougat/emacs/modeline.org"
 #+INCLUDE: "../nougat/emacs/undo-tree.org"
+#+INCLUDE: "../nougat/emacs/diff-kill.org"
 
 ** exec-path from shell
 [[https://github.com/purcell/exec-path-from-shell][This]] is a GNU Emacs library to ensure environment variables inside Emacs look the
