--- a/nougat/packages/org-mode/setup.org
+++ b/nougat/packages/org-mode/setup.org
@@ -171,3 +171,9 @@ instead insert the new heading after the end of the current entry.
             (lambda ()
               (add-hook 'before-save-hook 'org-mode--ensure-one-blank-line nil 'make-it-local)))
 #+end_src
+
+*** ensure no trailing whitespace
+#+begin_src emacs-lisp
+  (add-hook 'org-mode-hook
+                  (add-hook 'before-save-hook 'delete-trailing-whitespace))
+#+end_src
