added gitignore-mode support, added pandoc support for org

--- a/nougat/packages/pandoc-mode/pandoc-mode.org
+++ b/nougat/packages/pandoc-mode/pandoc-mode.org
@@ -12,4 +12,5 @@ menu of supported actions, type =C-c /= while the mode is enabled.
 #+CAPTION: Automatically enable for mode types
 #+begin_src emacs-lisp
 (add-hook 'markdown-mode-hook 'pandoc-mode)
+(add-hook 'org-mode-hook 'pandoc-mode)
 #+end_src
