--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -120,7 +120,10 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/helm/extras/helm-projectile.org"
 * yasnippet
 #+INCLUDE: "../nougat/packages/yasnippet/yasnippet.org"
-* magit
+* git
+** gitignore
+#+INCLUDE: "../nougat/packages/gitignore/gitignore.org"
+** magit
  #+INCLUDE: "../nougat/packages/magit/setup.org"
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
