--- a/nougat/packages/org-mode/setup.org
+++ b/nougat/packages/org-mode/setup.org
@@ -174,6 +174,6 @@ instead insert the new heading after the end of the current entry.
 
 *** ensure no trailing whitespace
 #+begin_src emacs-lisp
-  (add-hook 'org-mode-hook
-                  (add-hook 'before-save-hook 'delete-trailing-whitespace))
+;;  (add-hook 'org-mode-hook
+;;                  (add-hook 'before-save-hook 'delete-trailing-whitespace))
 #+end_src
