generalized aspell finding

--- a/nougat/emacs/minor-modes.org
+++ b/nougat/emacs/minor-modes.org
@@ -102,6 +102,6 @@ Matching closed brackets are inserted for any typed open bracket.
 
 ** ispell-minor-mode
 #+begin_src emacs-lisp
-  (setq ispell-program-name (expand-file-name "~/.nix-profile/bin/aspell"))
+  (setq ispell-program-name (expand-file-name (shell-command-to-string "which aspell")))
 #+end_src
 
