disable return-exit for multiple cursors

--- a/nougat/packages/multiple-cursors/multiple-cursors.org
+++ b/nougat/packages/multiple-cursors/multiple-cursors.org
@@ -1,5 +1,5 @@
 * Multiple Cursors
-Multiple Cursors is an emacs package to provide Sublime Text-like multiple selections.
+[[https://github.com/magnars/multiple-cursors.el][Multiple Cursors]] is an emacs package to provide Sublime Text-like multiple selections.
 
 This section isn't very configured yet.
 #+begin_src emacs-lisp
@@ -8,4 +8,5 @@ This section isn't very configured yet.
 (global-set-key (kbd "C->") 'mc/mark-next-like-this)
 (global-set-key (kbd "C-<") 'mc/mark-previous-like-this)
 (global-set-key (kbd "C-c C-<") 'mc/mark-all-like-this)
+(define-key mc/keymap (kbd "<return>") nil) ;; exit multiple-cursors with C-g only.
 #+end_src
