--- a/nougat/packages/org-mode/extras/org-babel.org
+++ b/nougat/packages/org-mode/extras/org-babel.org
@@ -11,7 +11,7 @@
 #+begin_src emacs-lisp
   (setq org-babel-default-header-args
         '((:session . "none")
-          (:results . "silent")
+;;          (:results . "silent")
           (:exports . "code")
           (:cache . "no")
           (:noweb . "no")
