--- a/nougat/packages/projectile/discover-projects.org
+++ b/nougat/packages/projectile/discover-projects.org
@@ -2,7 +2,7 @@
 
 ** projectile-project-directory
 #+begin_src emacs-lisp
-  (defvar projectile-project-directory (expand-file-name "~/src"))
+  (defvar projectile-project-directory (expand-file-name "~/Projects"))
 
   (projectile-discover-projects-in-directory
      (file-name-as-directory projectile-project-directory))
