--- a/nougat/packages/yasnippet/yasnippet.org
+++ b/nougat/packages/yasnippet/yasnippet.org
@@ -1,6 +1,6 @@
 * YASnippet
-YASnippet extends org-mode '<s'-like templating in an arbitrary way.
-This is useful for quickly applying export settings, annotating code blocks, and the like. 
+YASnippet extends org-mode '<s'-like templating in an arbitrary way.  This is useful
+for quickly applying export settings, annotating code blocks, and the like.
 
 This assumes that snippets are stored or symlinked to =${HOME}/.emacs.d/snippets/*=
 #+begin_src emacs-lisp
