ox-gfm and gnuplot

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -99,6 +99,8 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/htmlize.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/toc-org.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
 
