--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -101,6 +101,7 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/toc-org.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
