--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -130,6 +130,7 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
 
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
