--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -172,6 +172,9 @@ Override default project directory path.
 #+INCLUDE: "../nougat/support/python/elpy.org"
 ** markdown
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
+** docker
+#+INCLUDE: "../nougat/support/docker/dockerfile-mode.org"
+
 
 * hydra
 #+INCLUDE: "../nougat/packages/hydra/setup.org"
