--- a/nougat/emacs/flycheck.org
+++ b/nougat/emacs/flycheck.org
@@ -17,3 +17,18 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 (eval-after-load 'flycheck
   '(define-key flycheck-mode-map (kbd "C-c ! h") 'helm-flycheck))
 #+end_src
+
+** flycheck-proselint
+#+CAPTION: enable proselint support for flycheck
+#+begin_src emacs-lisp
+(flycheck-define-checker proselint
+  "A linter for prose."
+  :command ("proselint" source-inplace)
+  :error-patterns
+  ((warning line-start (file-name) ":" line ":" column ": "
+	    (id (one-or-more (not (any " "))))
+	    (message) line-end))
+  :modes (text-mode markdown-mode gfm-mode org-mode))
+
+(add-to-list 'flycheck-checkers 'proselint)
+#+end_src
