--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -174,7 +174,8 @@ Override default project directory path.
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
 ** docker
 #+INCLUDE: "../nougat/support/docker/dockerfile-mode.org"
-
+** direnv
+#+INCLUDE: "../nougat/support/direnv/direnv.org"
 
 * hydra
 #+INCLUDE: "../nougat/packages/hydra/setup.org"
