direnv support, global autorevert

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -100,6 +100,12 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+INCLUDE: "../nougat/emacs/undo-tree.org"
 #+INCLUDE: "../nougat/emacs/diff-kill.org"
 #+INCLUDE: "../nougat/emacs/flycheck.org"
+** auto-revert mode
+Auto-revert acts a lot more like modern editors (sublime, etc).  I think. 
+#+CAPTION: auto-revert
+#+begin_src emacs-lisp
+(global-auto-revert-mode t)
+#+end_src
 
 ** exec-path from shell
 [[https://github.com/purcell/exec-path-from-shell][This]] is a GNU Emacs library to ensure environment variables inside Emacs look the
