--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -163,6 +163,8 @@ Override default project directory path.
 * pandoc mode
 #+INCLUDE: "../nougat/packages/pandoc-mode/pandoc-mode.org"
 * language support
+** CSV
+#+INCLUDE: "../nougat/packages/csv-mode/csv-mode.org"
 ** LaTeX
 #+INCLUDE: "../nougat/support/latex/latex.org"
 ** lisp
