--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -104,24 +104,10 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+CAPTION: enable dired-sidebar
 #+begin_src emacs-lisp
 (straight-use-package 'dired-sidebar)
-  
+(global-set-key (kbd "C-x C-n") 'dired-sidebar-toggle-sidebar)
+(setq dired-sidebar-use-term-integration t)
 #+end_src
-:bind (("C-x C-n" . dired-sidebar-toggle-sidebar))
-  :ensure t
-  :commands (dired-sidebar-toggle-sidebar)
-  :init
-  (add-hook 'dired-sidebar-mode-hook
-            (lambda ()
-              (unless (file-remote-p default-directory)
-                (auto-revert-mode))))
-  :config
-  (push 'toggle-window-split dired-sidebar-toggle-hidden-commands)
-  (push 'rotate-windows dired-sidebar-toggle-hidden-commands)
 
-  (setq dired-sidebar-subtree-line-prefix "__")
-  (setq dired-sidebar-theme 'vscode)
-  (setq dired-sidebar-use-term-integration t)
-  (setq dired-sidebar-use-custom-font t))
 
 ** dired-sort-dirs
 #+CAPTION: sort directories first
