--- a/nougat/packages/projectile/setup.org
+++ b/nougat/packages/projectile/setup.org
@@ -3,6 +3,7 @@
   (use-package projectile
     :init
     (setq projectile-enable-caching t)
+    (setq projectile-keymap-prefix (kbd "C-c p"))
     :config
     (projectile-mode t))
 #+end_src
