resolve beautify error in terminal

--- a/nougat/packages/org-mode/setup.org
+++ b/nougat/packages/org-mode/setup.org
@@ -70,6 +70,7 @@
 *** theme customizations
 #+begin_src emacs-lisp
   (defvar org-beautify-font "Menlo")
+(when window-system
   (use-package org-beautify-theme)
   (let* ((background-color (face-background 'default nil 'default))
          (padding nil))
@@ -137,6 +138,7 @@
                               ((t (:inherit org-block-begin-line))))
                             `(org-done
                               ((t (:strike-through t))))))
+)
 #+end_src
 
 ** feel
