--- a/nougat/emacs/minor-modes.org
+++ b/nougat/emacs/minor-modes.org
@@ -19,6 +19,13 @@ Various symbols will be replaced with nice looking unicode glyphs.
 Matching closed brackets are inserted for any typed open bracket.
 #+BEGIN_SRC emacs-lisp
   (electric-pair-mode 1)
+  ;; disable {} auto pairing in electric-pair-mode for web-mode
+(add-hook
+ 'org-mode-hook
+ (lambda ()
+   (setq-local electric-pair-inhibit-predicate
+               `(lambda (c)
+                  (if (char-equal c ?<) t (,electric-pair-inhibit-predicate c))))))
 #+END_SRC
 
 ** rainbow-delimeters-mode
