gitignore mode, refactoring

--- a/nougat/packages/gitignore/gitignore.org
+++ b/nougat/packages/gitignore/gitignore.org
@@ -1,5 +1,18 @@
 * gitignore
+** Syntax highlighting
 Gitignore syntax highlighting is provided by the [[https://github.com/magit/git-modes/blob/master/gitignore-mode.el][gitignore-mode]] package in magit.
 #+begin_src emacs-lisp
 (use-package gitignore-mode)
+#+end_src
+
+** gitignore.io
+Access to pre-baked gitignore lists for various languages.
+
+#+begin_src emacs-lisp
+(use-package gitignore
+:straight (gitignore
+           :type git
+           :host github
+           :repo "syohex/emacs-gitignore")
+)
 #+end_src
