--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -100,48 +100,10 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+INCLUDE: "../nougat/emacs/undo-tree.org"
 #+INCLUDE: "../nougat/emacs/diff-kill.org"
 #+INCLUDE: "../nougat/emacs/flycheck.org"
-** NeoTree
-#+begin_src emacs-lisp
-    (use-package neotree
-;;      :straight (neotree :type git
-;;                                :host github
-;;                                :repo "")
-      :config (require 'neotree))
-(setq neo-theme (if (display-graphic-p) 'icons 'arrow))
-(setq projectile-switch-project-action 'neotree-projectile-action)
-(defun neotree-project-dir ()
-    "Open NeoTree using the git root."
-    (interactive)
-    (let ((project-dir (projectile-project-root))
-          (file-name (buffer-file-name)))
-      (neotree-toggle)
-      (if project-dir
-          (if (neo-global--window-exists-p)
-              (progn
-                (neotree-dir project-dir)
-                (neotree-find file-name)))
-        (message "Could not find git project root."))))
-(global-set-key [f8] 'neotree-project-dir)
-(setq neo-smart-open t)
-#+end_src
-
-*** all the icons
-#+CAPTION: 
-#+begin_src emacs-lisp
-(use-package all-the-icons
-:config (require 'all-the-icons))
-#+end_src
-
-
-
-** dired-sort-dirs
-#+CAPTION: sort directories first
-#+begin_src emacs-lisp
-(setq dired-listing-switches "-al --group-directories-first")
-#+end_src
-
+#+INCLUDE: "../nougat/emacs/neotree.org"
+#+INCLUDE: "../nougat/emacs/dired.org"
 ** auto-revert mode
-Auto-revert acts a lot more like modern editors (sublime, etc).  I think. 
+Auto-revert acts a lot more like modern editors (sublime, etc).  I think.
 #+CAPTION: auto-revert
 #+begin_src emacs-lisp
 (global-auto-revert-mode t)
