--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -102,6 +102,8 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+INCLUDE: "../nougat/emacs/flycheck.org"
 #+INCLUDE: "../nougat/emacs/neotree.org"
 #+INCLUDE: "../nougat/emacs/dired.org"
+#+INCLUDE: "../nougat/emacs/popwin.org"
+
 ** auto-revert mode
 Auto-revert acts a lot more like modern editors (sublime, etc).  I think.
 #+CAPTION: auto-revert
