--- a/README.org
+++ b/README.org
@@ -5,9 +5,10 @@ Collaborative Emacs configuration is currently limited to the following options:
 - Encapsulate features of configuration into packages and distribute them
 - Hand pick snippets out of other people's config and never benefit from enhancements
   they make later.
-- Something even worse like a fucking wiki.
+- Something even more egregious.
+- Bundled emacs+stuff macropackages (=scimax=, =spacemacs=, etc.)
 
-Emacs-nougat is a repository of "not-quite-packagable" snippets (nougat) and a system
+Emacs-nougat is a repository of "not-quite-packagable" snippets (nougats) and a system
 for composing them into a config file.
 
 ** How does it work?
@@ -50,4 +51,4 @@ You can copy this to =~/.emacs.d/init.el= or create a symlink to it, or simply r
 
 
 ** Contributing
-Fork us, add your outline, and contribute your nougat!
+Fork me, add your outline, contribute your nougat!
