--- a/README.org
+++ b/README.org
@@ -51,4 +51,4 @@ You can copy this to =~/.emacs.d/init.el= or create a symlink to it, or simply r
 
 
 ** Contributing
-Fork me, add your outline, contribute your nougat!
+Fork me, add your outline, bcontribute your nougat!
