--- a/nougat/emacs/flycheck.org
+++ b/nougat/emacs/flycheck.org
@@ -32,3 +32,15 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 
 (add-to-list 'flycheck-checkers 'proselint)
 #+end_src
+
+** write-good
+
+#+begin_src emacs-lisp
+(use-package writegood-mode
+:straight (writegood-mode
+           :type git
+           :host github
+           :repo "bnbeckwith/writegood-mode")
+:config (require 'writegood-mode))
+(global-set-key "\C-cg" 'writegood-mode)
+#+end_src
