Multiple cursors keybinding change

--- a/nougat/packages/multiple-cursors/multiple-cursors.org
+++ b/nougat/packages/multiple-cursors/multiple-cursors.org
@@ -5,8 +5,21 @@ This section isn't very configured yet.
 #+begin_src emacs-lisp
 (use-package multiple-cursors)
 (require 'multiple-cursors)
-(global-set-key (kbd "C->") 'mc/mark-next-like-this)
-(global-set-key (kbd "C-<") 'mc/mark-previous-like-this)
+(global-set-key (kbd "s-d") 'mc/mark-next-like-this)
+(global-set-key (kbd "s-e") 'mc/mark-previous-like-this)
 (global-set-key (kbd "C-c C-<") 'mc/mark-all-like-this)
 (define-key mc/keymap (kbd "<return>") nil) ;; exit multiple-cursors with C-g only.
+#+end_src
+
+* phi-search
+This is an incremental search which works with multiple cursors
+
+#+begin_src emacs-lisp
+(use-package phi-search)
+(require 'phi-search)
+#+end_src
+
+#+begin_src emacs-lisp
+(global-set-key (kbd "C-s") 'phi-search)
+(global-set-key (kbd "C-r") 'phi-search-backward)
 #+end_src
