update to use hunspell

--- a/nougat/packages/helm/extras/helm-flyspell.org
+++ b/nougat/packages/helm/extras/helm-flyspell.org
@@ -1,5 +1,13 @@
 * helm-flyspell
 With =flyspell-mode= on, use =C-;= after a word to correct it with Helm.
+
+#+begin_src emacs-lisp
+(setq ispell-program-name (executable-find "hunspell")
+      ispell-dictionary "en_US")
+
+#+end_src
+
+
 #+begin_src emacs-lisp
   (use-package helm-flyspell
     :bind (:map flyspell-mode-map
