--- a/nougat/packages/org-mode/extras/org-export.org
+++ b/nougat/packages/org-mode/extras/org-export.org
@@ -26,6 +26,6 @@ Insert line-breaks where needed to avoid PDF overflow.
 
 (setq org-latex-minted-options '(("breaklines" "true")
                                  ("breakanywhere" "true")
-                                 ("fontsize" "\\tiny"))
+                                 ("fontsize" "\\scriptsize"))
 )
 #+END_SRC
