--- a/nougat/packages/multiple-cursors/multiple-cursors.org
+++ b/nougat/packages/multiple-cursors/multiple-cursors.org
@@ -17,9 +17,11 @@ This is an incremental search which works with multiple cursors
 #+begin_src emacs-lisp
 (use-package phi-search)
 (require 'phi-search)
+(require 'phi-replace)
 #+end_src
 
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-s") 'phi-search)
 (global-set-key (kbd "C-r") 'phi-search-backward)
+(global-set-key (kbd "M-%") 'phi-replace-query)
 #+end_src
