Add solarized theme

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -83,8 +83,15 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 
 * badger-theme
 #+begin_src emacs-lisp
-  (use-package badger-theme
-    :config (load-theme 'badger t))
+  (use-package badger-theme)
+;;    :config (load-theme 'badger t))
+#+end_src
+
+* solarized-theme
+
+#+begin_src emacs-lisp
+(use-package solarized-theme
+:config (load-theme 'solarized-dark t))
 #+end_src
 
 * emacs
