Removing unused stuff

--- a/nougat/emacs/minor-modes.org
+++ b/nougat/emacs/minor-modes.org
@@ -12,7 +12,7 @@
 ** prettify-symbols-mode
 Various symbols will be replaced with nice looking unicode glyphs.
 #+BEGIN_SRC emacs-lisp
-  (global-prettify-symbols-mode 1)
+;;  (global-prettify-symbols-mode 1)
 #+END_SRC
 
 ** electric-pair-mode
