--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -81,13 +81,14 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+INCLUDE: "../nougat/package-management/straight.org::bootstrap"
 #+INCLUDE: "../nougat/package-management/straight.org::use-package integration"
 
-* badger-theme
+* Themes
+** Badger-theme
 #+begin_src emacs-lisp
-  (use-package badger-theme)
+;;  (use-package badger-theme)
 ;;    :config (load-theme 'badger t))
 #+end_src
 
-* solarized-theme
+** Solarized-theme
 
 #+begin_src emacs-lisp
 (use-package solarized-theme
@@ -131,6 +132,17 @@ same as in the user's shell.
       (exec-path-from-shell-initialize)))
 #+end_src
 
+** display line numbers
+#+begin_src emacs-lisp
+(global-display-line-numbers-mode)
+#+end_src
+
+** open files in native applications
+
+#+begin_src emacs-lisp
+
+#+end_src
+
 * org-mode
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::setup"
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::look"
@@ -148,7 +160,12 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
-#+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
+##+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
+#+CAPTION: set default applications for opening links
+#+begin_src emacs-lisp
+
+#+end_src
+
 
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
@@ -175,7 +192,7 @@ Override default project directory path.
 ** gitignore
 #+INCLUDE: "../nougat/packages/gitignore/gitignore.org"
 ** magit
- #+INCLUDE: "../nougat/packages/magit/setup.org"
+ ##+INCLUDE: "../nougat/packages/magit/setup.org"
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
 * pandoc mode
