--- a/nougat/emacs/fonts.org
+++ b/nougat/emacs/fonts.org
@@ -1,6 +1,6 @@
 * Menlo
-Menlo is a wonderful monospace font.  On modern displays, 12 point is a
-reasonable size.
+Menlo is a wonderful monospace font.  On modern displays, 14 point is a
+reasonable size for old eyes.
 #+begin_src emacs-lisp
 (add-to-list 'default-frame-alist '(font . "Menlo 14"))
 #+end_src
