Ivy C-x C-f, updated build script

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -166,7 +166,6 @@ same as in the user's shell.
 
 #+end_src
 
-
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
 
@@ -186,6 +185,9 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/helm/extras/helm-flyspell.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-org-rifle.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-projectile.org"
+* ivy
+#+INCLUDE: "../nougat/packages/ivy/ivy.org"
+
 * yasnippet
 #+INCLUDE: "../nougat/packages/yasnippet/yasnippet.org"
 * git
