--- a/nougat/packages/helm/setup.org
+++ b/nougat/packages/helm/setup.org
@@ -4,7 +4,7 @@
     :demand
     :bind (("M-x" . helm-M-x)
            ("C-h f" . helm-apropos)
-           ("C-x C-f" . helm-find-files)
+;;           ("C-x C-f" . helm-find-files)
            ("C-x b" . helm-buffers-list)
            ("C-c y" . helm-show-kill-ring)
            ("C-x C-r" . helm-recentf)
