--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -160,6 +160,8 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/ox-rst.org"
+
 ##+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
 #+CAPTION: set default applications for opening links
 #+begin_src emacs-lisp
