add hugo exporter

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -1,4 +1,3 @@
-
 # ReadTheDocs styling for export
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
@@ -161,7 +160,7 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-rst.org"
-
+#+INCLUDE: "../nougat/packages/org-mode/extras/ox-hugo.org"
 ##+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
 #+CAPTION: set default applications for opening links
 #+begin_src emacs-lisp
