--- a/nougat/packages/org-mode/extras/org-projectile.org
+++ b/nougat/packages/org-mode/extras/org-projectile.org
@@ -1,5 +1,18 @@
-
 * Org-projectile
 [[https://github.com/IvanMalison/org-projectile][org-projectile]] provides functions for the creation of org-mode TODOs that are
 associated with projectile projects.
 
+#+CAPTION: require org projectile
+#+begin_src emacs-lisp
+(use-package org-projectile
+  :bind (("C-c n p" . org-projectile-project-todo-completing-read)
+         ("C-c c" . org-capture))
+  :config
+  (progn
+    (org-projectile-per-project)
+    (setq org-projectile-per-project-filepath
+          "notes.org")
+    (setq org-agenda-files (append org-agenda-files (org-projectile-todo-files)))
+    (push (org-projectile-project-todo-entry) org-capture-templates))
+  :ensure t)
+#+end_src
