--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -161,6 +161,7 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-rst.org"
+##+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
 
 ##+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
 #+CAPTION: set default applications for opening links
@@ -197,6 +198,11 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/gitignore/gitignore.org"
 ** magit
  ##+INCLUDE: "../nougat/packages/magit/setup.org"
+** github
+*** gist
+#+INCLUDE: "../nougat/packages/github/gist.org"
+
+
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
 * pandoc mode
