--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -112,6 +112,31 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+INCLUDE: "../nougat/emacs/popwin.org"
 #+INCLUDE: "../nougat/emacs/ws-butler.org"
 
+** split window sensibly
+#+CAPTION: from [[https://stackoverflow.com/questions/23659909/reverse-evaluation-order-of-split-height-threshold-and-split-width-threshold-in][SO]]
+#+begin_src emacs-lisp
+(defun my-split-window-sensibly (&optional window)
+  (let ((window (or window (selected-window))))
+    (or (and (window-splittable-p window t)
+             ;; Split window horizontally.
+             (with-selected-window window
+               (split-window-right)))
+        (and (window-splittable-p window)
+             ;; Split window vertically.
+             (with-selected-window window
+               (split-window-below)))
+        (and (eq window (frame-root-window (window-frame window)))
+             (not (window-minibuffer-p window))
+             ;; If WINDOW is the only window on its frame and is not the
+             ;; minibuffer window, try to split it horizontally disregarding
+             ;; the value of `split-width-threshold'.
+             (let ((split-width-threshold 0))
+               (when (window-splittable-p window t)
+                 (with-selected-window window
+                   (split-window-right))))))))
+
+(setq split-window-preferred-function 'my-split-window-sensibly)
+#+end_src
 
 ** auto-revert mode
 Auto-revert acts a lot more like modern editors (sublime, etc).  I think.
@@ -195,7 +220,7 @@ Override default project directory path.
 ** gitignore
 #+INCLUDE: "../nougat/packages/gitignore/gitignore.org"
 ** magit
- ##+INCLUDE: "../nougat/packages/magit/setup.org"
+#+INCLUDE: "../nougat/packages/magit/setup.org"
 * multiple-cursors
 #+INCLUDE: "../nougat/packages/multiple-cursors/multiple-cursors.org"
 * pandoc mode
