Update cursor display

--- a/nougat/emacs/cursor.org
+++ b/nougat/emacs/cursor.org
@@ -1,7 +1,7 @@
 * cursor
 ** box style
 #+BEGIN_SRC emacs-lisp
-  (setq-default cursor-type 'box)
+  (setq-default cursor-type 'bar)
 #+END_SRC
 
 ** blinking
