Update ivy error message, adjust font text.

--- a/nougat/emacs/fonts.org
+++ b/nougat/emacs/fonts.org
@@ -1,5 +1,5 @@
 * Menlo
-Menlo is a wonderful monospace font.  On modern displays, 14 point is a
+Menlo is a wonderful monospace font.  On modern displays, 12-14 point is a
 reasonable size for old eyes.
 #+begin_src emacs-lisp
 (add-to-list 'default-frame-alist '(font . "Menlo 12"))
