--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -1,17 +1,9 @@
-# ReadTheDocs styling for export
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
-#+HTML_HEAD: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-#+HTML_HEAD: <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.js"></script>
-#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
-
-
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/setup/theme-readtheorg.setup
 #+language: en
 #+startup: overview indent align
 #+babel: :cache no
 #+options: ^:nil num:nil tags:nil toc:nil* OS-specific
-#+title: gvoysey's init.el
+#+title: Emacs config, org-mode style.
 #+description: A literate programming-style exposition of my Emacs configuration
 * OS-specific
 ** macOS
@@ -185,6 +177,7 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-rst.org"
+
 ##+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-hugo.org"
 ##+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
