--- a/nougat/emacs/disable.org
+++ b/nougat/emacs/disable.org
@@ -11,7 +11,10 @@
 
 ** scrollbar
 #+BEGIN_SRC emacs-lisp
-  (scroll-bar-mode -1)
+;;disable scroll-bar mode if it's even compiled.  
+(when (display-graphic-p)
+(scroll-bar-mode -1)
+)
 #+END_SRC
 
 ** startup message
