Add avy-jump stuff; change comments for badger

--- a/user-outlines/gvoysey.org
+++ b/user-outlines/gvoysey.org
@@ -73,14 +73,14 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+INCLUDE: "../nougat/package-management/straight.org::use-package integration"
 
 * Themes
-** Badger-theme
+** COMMENT Badger-theme
 #+begin_src emacs-lisp
-;;  (use-package badger-theme)
-;;    :config (load-theme 'badger t))
+  (use-package badger-theme)
+   :config (load-theme 'badger t))
 #+end_src
 
 ** Solarized-theme
-#+CAPTION: use solarized
+#+CAPTION: use solarized theme, it's purty.
 #+begin_src emacs-lisp
 (use-package solarized-theme)
 (load-theme 'solarized-dark t)
@@ -112,6 +112,15 @@ Disable doc-view-mode defaults for pdf files (prefer evince).
 #+INCLUDE: "../nougat/emacs/dired.org"
 #+INCLUDE: "../nougat/emacs/popwin.org"
 #+INCLUDE: "../nougat/emacs/ws-butler.org"
+** Avy
+#+CAPTION: avy keybindings
+#+begin_src emacs-lisp
+(global-set-key (kbd "C-:") 'avy-goto-char)
+(global-set-key (kbd "C-'") 'avy-goto-char-2)
+(global-set-key (kbd "M-g f") 'avy-goto-line)
+(global-set-key (kbd "M-g w") 'avy-goto-word-1)
+#+end_src
+
 ** COMMENT sr-speedbar
 #+include: "../nougat/emacs/srspeedbar.org"
 
@@ -211,14 +220,13 @@ same as in the user's shell.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-rst.org"
+#+INCLUDE: "../nougat/packages/org-mode/extras/org-avy.org"
+
 
 ##+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
-#+INCLUDE: "../nougat/packages/org-mode/extras/ox-hugo.org"
+##+INCLUDE: "../nougat/packages/org-mode/extras/ox-hugo.org"
 ##+INCLUDE: "../nougat/packages/org-mode/extras/gnuplot.org"
-#+CAPTION: set default applications for opening links
-#+begin_src emacs-lisp
 
-#+end_src
 
 * projectile
 #+INCLUDE: "../nougat/packages/projectile/setup.org"
@@ -234,7 +242,7 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/helm/extras/ace-jump-helm-line.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-ag.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-bookmark.org"
-#+INCLUDE: "../nougat/packages/helm/extras/helm-company.org"
+##+INCLUDE: "../nougat/packages/helm/extras/helm-company.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-descbinds.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-flyspell.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-org-rifle.org"
